# vellaveto

./: .dockerignore  .gitignore  ATTACK_PLAYBOOK.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODEX_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_PLAN.md  Dockerfile  GOVERNANCE.md  IMPROVEMENT_PLAN.md  LICENSE  LICENSE-APACHE-2.0  LICENSE-BSL-1.1  LICENSE-MIT  LICENSE-MPL-2.0  LICENSING.md  MODULE_EXTRACTION_PLAYBOOK.md  Makefile  NOTICE  README.md  ROADMAP.md  ROADMAP_ACP.md  SECURITY.md  SECURITY_AUDIT_LOG.md  SECURITY_BOUNTY.md  SWARM_FINDINGS_PLAN.md  TASKS.md  codecov.yml  deny.toml  docker-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_a2a_classify.rs  fuzz_agent_card_parse.rs  fuzz_agent_card_url.rs  fuzz_async_tasks.rs  fuzz_attestation_verify.rs  fuzz_audio_metadata.rs  fuzz_cidr_parsing.rs  fuzz_circuit_breaker.rs  fuzz_classify_message.rs  fuzz_dlp_decoding.rs  fuzz_etdi_signature.rs  fuzz_extract_domain.rs  fuzz_grpc_proto.rs  fuzz_homoglyph.rs  fuzz_injection_detection.rs  fuzz_json_rpc_framing.rs  fuzz_normalize_path.rs  fuzz_output_validation.rs  fuzz_policy_compilation.rs  fuzz_scan_params.rs  fuzz_schema_lineage.rs  fuzz_semantic_similarity.rs  fuzz_video_metadata.rs  fuzz_ws_frame.rs
mcpsec/: ATTACKS.md  Cargo.toml  METHODOLOGY.md  PROPERTIES.md  README.md  SCORING.md
mcpsec/results/: vellaveto-v3.x.json  vellaveto-v6.0.json
mcpsec/src/: compare.rs  lib.rs  main.rs  remediation.rs  report.rs  runner.rs  scoring.rs
mcpsec/tests/: mock_gateway_test.rs  self_test.rs
sentinel-approval/: Cargo.toml
sentinel-approval/src/: lib.rs
sentinel-audit/: Cargo.toml
sentinel-audit/benches/: audit.rs
sentinel-audit/src/: adversa_top25.rs  aivss.rs  archive.rs  atlas.rs  checkpoints.rs  cosai.rs  etdi_audit.rs  eu_ai_act.rs  events.rs  exec_graph.rs  export.rs  gap_analysis.rs  iso27090.rs  iso42001.rs  lib.rs  logger.rs  merkle.rs  nist_rmf.rs  pii.rs  redaction.rs  rotation.rs  soc2.rs  streaming.rs  tests.rs  types.rs  verification.rs
sentinel-audit/tests/: audit_logging.rs  cross_crate_audit.rs  integration.rs  proptest_audit.rs  proptest_observability.rs
sentinel-canonical/: Cargo.toml
sentinel-canonical/src/: lib.rs
sentinel-cluster/: Cargo.toml
sentinel-cluster/src/: lib.rs  local.rs  redis_backend.rs
sentinel-cluster/tests/: test_local_backend.rs
sentinel-config/: Cargo.toml
sentinel-config/src/: a2a.rs  abac.rs  cluster.rs  compliance.rs  config_validate.rs  enterprise.rs  etdi.rs  extension.rs  fips.rs  gateway.rs  grpc_transport.rs  lib.rs  manifest.rs  mcp_protocol.rs  memory_nhi.rs  observability.rs  policy_rule.rs  rag_defense_config.rs  supply_chain.rs  tests.rs  threat_detection.rs  tool_registry.rs  transport.rs  validation.rs
sentinel-engine/: Cargo.toml
sentinel-engine/benches/: evaluation.rs
sentinel-engine/src/: abac.rs  behavioral.rs  circuit_breaker.rs  compiled.rs  constraint_eval.rs  context_check.rs  deputy.rs  domain.rs  engine_tests.rs  error.rs  least_agency.rs  legacy.rs  lib.rs  matcher.rs  path.rs  policy_compile.rs  rule_check.rs  traced.rs
sentinel-engine/tests/: conditional_policies.rs  cross_crate_pipeline.rs  engine_edge_cases.rs  integration.rs  parameter_constraints.rs  policy_evaluation.rs  proptest_properties.proptest-regressions  proptest_properties.rs  test_phase7_engine_adversarial.rs
sentinel-http-proxy/: Cargo.toml  build.rs
sentinel-http-proxy/benches/: http_proxy.rs
sentinel-http-proxy/src/: lib.rs  main.rs  oauth.rs  proxy.rs  session.rs
sentinel-http-proxy/tests/: proxy_integration.rs
sentinel-integration/: Cargo.toml
sentinel-integration/examples/: audit_throughput_benchmark.rs  audit_trail.rs  basic_evaluation.rs  concurrent_audit_benchmark.rs  conditional_scaling_benchmark.rs  engine_benchmark.rs  mixed_workload_benchmark.rs  policy_scaling_benchmark.rs  serialization_benchmark.rs
sentinel-integration/src/: lib.rs
sentinel-integration/tests/: adversarial_hardening.rs  append_idempotency_and_ordering.rs  approval_flow.rs  audit_concurrent_interleave.rs  audit_concurrent_read_write.rs  audit_concurrent_report_gen.rs  audit_concurrent_report_stress.rs  audit_empty_state_behaviors.rs  audit_entry_ordering_fidelity.rs  audit_field_fidelity.rs  audit_large_valid_payloads.rs  audit_load_corruption_resilience.rs  audit_logger_filesystem_edge.rs  audit_metadata_fidelity.rs  audit_metadata_jsonl_injection.rs  audit_midstream_disruption.rs  audit_midstream_file_ops.rs  audit_multi_logger_isolation.rs  audit_pipeline.rs  audit_report_deep_v2.rs  audit_report_verdict_distributions.rs  audit_sequential_lifecycle.rs  audit_serialization_roundtrip.rs  audit_type_completeness.rs  audit_unicode_paths.rs  audit_validation_adversarial.rs  audit_validation_control_chars.rs  audit_validation_exact_boundaries.rs  canonical_policy_evaluation.rs  canonical_preset_engine_eval.rs  combinatorial_policy_fuzz.rs  concurrent_write_safety.rs  conditional_extreme_priorities.rs  conditional_interactions.rs  conditional_passthrough_behavior.rs  config_driven_evaluation.rs  config_to_engine_pipeline.rs  core_invariant_smoke.rs  credential_exfil_demo.rs  cross_crate_type_compat.rs  (+70 more)
sentinel-mcp/: Cargo.toml
sentinel-mcp/benches/: inspection.rs  rug_pull.rs  semantic.rs
sentinel-proxy/: Cargo.toml
sentinel-server/: Cargo.toml  example-config.toml
sentinel-types/: Cargo.toml
vellaveto-approval/: Cargo.toml  README.md
vellaveto-audit/: Cargo.toml  README.md
vellaveto-canary/: Cargo.toml  LICENSE  README.md
vellaveto-canonical/: Cargo.toml  README.md
vellaveto-cluster/: Cargo.toml  README.md
vellaveto-config/: Cargo.toml  README.md
vellaveto-discovery/: Cargo.toml  README.md
vellaveto-engine/: Cargo.toml  README.md
vellaveto-http-proxy/: Cargo.toml  README.md  build.rs
vellaveto-http-proxy-shield/: Cargo.toml  README.md
vellaveto-integration/: Cargo.toml
vellaveto-mcp/: Cargo.toml  README.md
vellaveto-mcp-shield/: Cargo.toml  LICENSE  README.md
vellaveto-operator/: Cargo.toml  README.md
vellaveto-proxy/: Cargo.toml  README.md
(+1365 files in other folders)
