[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "sentinel-types",
    "sentinel-engine",
    "sentinel-audit",
    "sentinel-mcp",
    "sentinel-canonical",
    "sentinel-config",
    "sentinel-cluster",
    "sentinel-integration",
    "sentinel-server",
    "sentinel-approval",
    "sentinel-proxy",
    "sentinel-http-proxy",
]

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://github.com/paolovella/sentinel"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
metrics = "0.24"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# OpenTelemetry (Phase 4) - v0.27+ uses tonic 0.12+ with http 1.x
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
tokio-tungstenite = "0.28"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
overflow-checks = true

[profile.bench]
inherits = "release"
debug = true
