[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "vellaveto-types",
    "vellaveto-engine",
    "vellaveto-audit",
    "vellaveto-mcp",
    "vellaveto-canonical",
    "vellaveto-config",
    "vellaveto-cluster",
    "vellaveto-integration",
    "vellaveto-server",
    "vellaveto-approval",
    "vellaveto-proxy",
    "vellaveto-http-proxy",
    "vellaveto-operator",
    "mcpsec",
]

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://github.com/paolovella/vellaveto"
rust-version = "1.88.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.21", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
metrics = "0.24"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# OpenTelemetry — v0.31+ uses tonic 0.14+ with http 1.x
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
tokio-tungstenite = "0.28"
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
tokio-util = "0.7"
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
overflow-checks = true

[profile.bench]
inherits = "release"
debug = true
