[workspace]
resolver = "2"
exclude = ["fuzz", "formal/kani"]
members = [
    "vellaveto-types",
    "vellaveto-engine",
    "vellaveto-audit",
    "vellaveto-mcp",
    "vellaveto-canonical",
    "vellaveto-config",
    "vellaveto-discovery",
    "vellaveto-cluster",
    "vellaveto-integration",
    "vellaveto-server",
    "vellaveto-approval",
    "vellaveto-proxy",
    "vellaveto-http-proxy",
    "vellaveto-operator",
    "mcpsec",
    "vellaveto-mcp-shield",
    "vellaveto-http-proxy-shield",
    "vellaveto-canary",
    "vellaveto-shield",
    "vellaveto-tls",
]

[workspace.package]
license = "BUSL-1.1"
repository = "https://github.com/vellaveto/vellaveto"
homepage = "https://vellaveto.online"
rust-version = "1.88.0"
keywords = ["mcp", "security", "firewall", "ai-agent", "policy"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tokio 1.x LTS — pin to >=1.42 (last LTS baseline) to ensure consistent
# async runtime behavior. The 1.x series has LTS guarantees through 2026+.
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.21", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
metrics = "0.24"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# OpenTelemetry — v0.31+ uses tonic 0.14+ with http 1.x
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
tokio-tungstenite = "0.28"
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
tokio-util = "0.7"
tokio-stream = "0.1"
argon2 = "0.5"
password-hash = "0.5"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
regex = "1"
unicode-normalization = "0.1"
percent-encoding = "2.3"
base64 = "0.22"
flate2 = "1.1"
url = "2"
toml = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
overflow-checks = true

[profile.test]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
