[package]
name = "sentinel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-types = { path = "../sentinel-types" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "io-util", "macros"] }

[[bin]]
name = "fuzz_json_rpc_framing"
path = "fuzz_targets/fuzz_json_rpc_framing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_normalize_path"
path = "fuzz_targets/fuzz_normalize_path.rs"
test = false
doc = false

[[bin]]
name = "fuzz_extract_domain"
path = "fuzz_targets/fuzz_extract_domain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cidr_parsing"
path = "fuzz_targets/fuzz_cidr_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_classify_message"
path = "fuzz_targets/fuzz_classify_message.rs"
test = false
doc = false
