[package]
name = "vellaveto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vellaveto-mcp = { path = "../vellaveto-mcp", features = ["semantic-detection", "a2a"] }
vellaveto-engine = { path = "../vellaveto-engine" }
vellaveto-server = { path = "../vellaveto-server" }
vellaveto-types = { path = "../vellaveto-types" }
vellaveto-config = { path = "../vellaveto-config" }
chrono = "0.4"
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["rt", "io-util", "macros"] }

[[bin]]
name = "fuzz_json_rpc_framing"
path = "fuzz_targets/fuzz_json_rpc_framing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_normalize_path"
path = "fuzz_targets/fuzz_normalize_path.rs"
test = false
doc = false

[[bin]]
name = "fuzz_extract_domain"
path = "fuzz_targets/fuzz_extract_domain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cidr_parsing"
path = "fuzz_targets/fuzz_cidr_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_classify_message"
path = "fuzz_targets/fuzz_classify_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scan_params"
path = "fuzz_targets/fuzz_scan_params.rs"
test = false
doc = false

[[bin]]
name = "fuzz_semantic_similarity"
path = "fuzz_targets/fuzz_semantic_similarity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_async_tasks"
path = "fuzz_targets/fuzz_async_tasks.rs"
test = false
doc = false

[[bin]]
name = "fuzz_circuit_breaker"
path = "fuzz_targets/fuzz_circuit_breaker.rs"
test = false
doc = false

[[bin]]
name = "fuzz_schema_lineage"
path = "fuzz_targets/fuzz_schema_lineage.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dlp_decoding"
path = "fuzz_targets/fuzz_dlp_decoding.rs"
test = false
doc = false

[[bin]]
name = "fuzz_injection_detection"
path = "fuzz_targets/fuzz_injection_detection.rs"
test = false
doc = false

[[bin]]
name = "fuzz_policy_compilation"
path = "fuzz_targets/fuzz_policy_compilation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_output_validation"
path = "fuzz_targets/fuzz_output_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_etdi_signature"
path = "fuzz_targets/fuzz_etdi_signature.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_card_url"
path = "fuzz_targets/fuzz_agent_card_url.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_card_parse"
path = "fuzz_targets/fuzz_agent_card_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_homoglyph"
path = "fuzz_targets/fuzz_homoglyph.rs"
test = false
doc = false

[[bin]]
name = "fuzz_a2a_classify"
path = "fuzz_targets/fuzz_a2a_classify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_attestation_verify"
path = "fuzz_targets/fuzz_attestation_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ws_frame"
path = "fuzz_targets/fuzz_ws_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_grpc_proto"
path = "fuzz_targets/fuzz_grpc_proto.rs"
test = false
doc = false
