[package]
name = "mcpsec"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP Security Benchmark Framework — vendor-neutral security evaluation for MCP gateways"
repository = "https://github.com/vellaveto/vellaveto"
readme = "README.md"

[[bin]]
name = "mcpsec"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
chrono = { workspace = true }

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
