[package]
name = "sentinel-approval"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["sync", "fs", "io-util", "rt", "macros", "time"] }

[dev-dependencies]
tempfile = "3.0"
