[package]
name = "sentinel-approval"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.0", features = ["sync", "fs", "io-util", "rt", "macros", "time"] }
sha2 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.0"
