[package]
name = "sentinel-approval"
version = "2.2.1"
description = "Human-in-the-loop approval workflow with deduplication"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.0"
