[package]
name = "sentinel-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["fs", "io-util", "sync", "rt", "macros", "rt-multi-thread"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde_json_canonicalizer = "0.3"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"