[package]
name = "sentinel-audit"
version = "1.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["fs", "io-util", "sync", "rt", "macros", "rt-multi-thread"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde_json_canonicalizer = "0.3"
regex = "1"
# Streaming SIEM exporters (Phase 4)
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
hostname = { version = "0.4", optional = true }
async-trait = { workspace = true }

[features]
default = []
siem-exporters = ["reqwest", "base64", "hostname"]

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "audit"
harness = false