[package]
name = "sentinel-audit"
version = "2.2.1"
description = "Tamper-evident audit logging with hash chains and Ed25519 checkpoints"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tracing = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
serde_json_canonicalizer = "0.3"
regex = "1"
# Streaming SIEM exporters (Phase 4)
reqwest = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
hostname = { version = "0.4", optional = true }
async-trait = { workspace = true }
# Phase 15: Observability platform integration
flate2 = { version = "1.1", optional = true }  # gzip compression for webhook

[features]
default = []
siem-exporters = ["reqwest", "base64", "hostname"]
observability-exporters = ["reqwest", "base64", "flate2"]

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "audit"
harness = false