[package]
name = "sentinel-canonical"
version = "3.0.0"
description = "Canonical security policy presets for common scenarios"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.4"