[package]
name = "sentinel-cluster"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Distributed state backend for Sentinel clustering (Redis or local)"

[features]
default = []
redis-backend = ["redis", "deadpool-redis", "dep:sha2", "dep:unicode-normalization", "dep:uuid"]

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-approval = { path = "../sentinel-approval" }
sentinel-config = { path = "../sentinel-config" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Only used by redis-backend (feature-gated)
uuid = { workspace = true, optional = true }
sha2 = { version = "0.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }

# Redis dependencies — only compiled when redis-backend feature is enabled
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
deadpool-redis = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3.0"
toml = "0.9"
