[package]
name = "sentinel-config"
version = "2.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
