[package]
name = "sentinel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }