[package]
name = "sentinel-http-proxy"
version = "0.1.0"
edition = "2021"
description = "Sentinel MCP policy firewall — Streamable HTTP reverse proxy"

[lib]
name = "sentinel_http_proxy"
path = "src/lib.rs"

[[bin]]
name = "sentinel-http-proxy"
path = "src/main.rs"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-config = { path = "../sentinel-config" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1"
http = "1"
tower = "0.5"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.0"
