[package]
name = "sentinel-http-proxy"
version = "2.2.1"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Sentinel MCP policy firewall — Streamable HTTP reverse proxy"

[lib]
name = "sentinel_http_proxy"
path = "src/lib.rs"

[[bin]]
name = "sentinel-http-proxy"
path = "src/main.rs"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-config = { path = "../sentinel-config" }
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-approval = { path = "../sentinel-approval" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.0", features = ["derive"] }
dashmap = "6"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { workspace = true, features = ["stream"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-tungstenite = { workspace = true }
bytes = "1"
http = "1"
tower = "0.5"
sha2 = "0.10"
metrics = { workspace = true }
hmac = "0.12"
hex = "0.4"
subtle = "2"
governor = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.0"
