[package]
name = "sentinel-integration"
version = "3.0.0"
description = "Integration test suite for Sentinel components"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit", features = ["observability-exporters"] }
sentinel-config = { path = "../sentinel-config" }
sentinel-approval = { path = "../sentinel-approval" }
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-server = { path = "../sentinel-server" }
sentinel-http-proxy = { path = "../sentinel-http-proxy" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3.0"
arc-swap = "1"
axum = "0.8"
tower = "0.5"

[dev-dependencies]
flate2 = "1.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { workspace = true }
base64 = "0.22"
