[package]
name = "sentinel-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
unicode-normalization = "0.1"
aho-corasick = "1.1"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.0"