[package]
name = "sentinel-mcp"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-approval = { path = "../sentinel-approval" }
sentinel-config = { path = "../sentinel-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
unicode-normalization = "0.1"
aho-corasick = "1.1"
sha2 = "0.10"
serde_json_canonicalizer = "0.3"
hex = "0.4"
regex = "1"
chrono = { workspace = true }
base64 = "0.22"
percent-encoding = "2.3"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "inspection"
harness = false