[package]
name = "sentinel-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-proxy"
path = "src/main.rs"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-config = { path = "../sentinel-config" }
sentinel-mcp = { path = "../sentinel-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
