[package]
name = "sentinel-proxy"
version = "2.2.1"
description = "MCP stdio proxy for command-line tool integration"
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "sentinel-proxy"
path = "src/main.rs"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-config = { path = "../sentinel-config" }
sentinel-mcp = { path = "../sentinel-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
