[package]
name = "sentinel-server"
version = "0.1.0"
edition = "2021"
description = "Sentinel policy engine — CLI and HTTP server"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-canonical = { path = "../sentinel-canonical" }
sentinel-config = { path = "../sentinel-config" }
sentinel-approval = { path = "../sentinel-approval" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

arc-swap = "1"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
governor = "0.6"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
