[package]
name = "sentinel-server"
version = "3.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Sentinel policy engine — CLI and HTTP server"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[features]
default = []
redis-backend = ["sentinel-cluster/redis-backend"]
observability-exporters = ["sentinel-audit/observability-exporters"]

[dependencies]
sentinel-types = { path = "../sentinel-types" }
sentinel-engine = { path = "../sentinel-engine" }
sentinel-audit = { path = "../sentinel-audit" }
sentinel-mcp = { path = "../sentinel-mcp" }
sentinel-canonical = { path = "../sentinel-canonical" }
sentinel-config = { path = "../sentinel-config" }
sentinel-approval = { path = "../sentinel-approval" }
sentinel-cluster = { path = "../sentinel-cluster" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

arc-swap = "1"
axum = "0.8"
clap = { version = "4.0", features = ["derive"] }
toml = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
governor = "0.10"
subtle = "2"
uuid = { workspace = true }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
sha2 = "0.10"
notify = "8"
dashmap = "6"
percent-encoding = "2.3"
url = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
# OpenTelemetry (Phase 4)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Phase 5: Enterprise Hardening
tokio-rustls = "0.26"
rustls = "0.23"
x509-parser = "0.18"
reqwest = { workspace = true }
# SECURITY: lru >= 0.16.3 required to fix RUSTSEC-2026-0002 (Stacked Borrows violation)
lru = "0.16"

[dev-dependencies]
tempfile = "3.0"
async-trait.workspace = true
