[package]
name = "sentinel-types"
version = "2.0.0"
description = "Core type definitions for Sentinel policy engine"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.4"