[package]
name = "vellaveto-approval"
version = "3.0.0"
description = "Human-in-the-loop approval workflow with deduplication"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.0"
